- Fixed cPtsIndex::FindFrameNumber() to handle the case where Pts points to an I-frame.
- Added missing locks to SetMenuItem() functions.
- Revised locking in cMenuSchedule and cMenuWhatsOn.

2025-04-12: Version 2.7.5

- Added the "override" keyword to virtual functions reimplemented in derived classes.
  Plugins may want to do the same, but don't have to.
- Removed -Werror=overloaded-virtual from Makefile and Make.config(.template).
  Plugins may want to do the same, but don't have to.
- Renamed cStatus::Osd*2() to cStatus::Osd*().
  Plugins that use these recently introduced functions need to remove the '2' from the name.
- The new virtual function cSkinDisplayMenu::SetItemEvent(..., const cTimer *Timer) can be
  used to get full access to the timer (if any) defined for this event.
- Added mutex locks to protect creating/deleting cStatus and cEpgHandler objects (suggested
  by Markus Ehrnsperger).
- Making absolutely sure cEvent::Title() never returns NULL.
  APIVERSNUM is now 30007.
- Improved subtitle handling:
  + Subtitles now disappear as signaled in the data stream.
  + Subtitles are now kept in memory for at least 120 seconds, to have them readily
    available after a short rewind during replay.
- Subtitles can now be temporarily displayed after a fast rewind:
  + The setup option "DVB/Display subtitles" now has three settings: "no" and "always"
    behave like before, the new "after rewind" turns on subtitles after a fast rewind
    during replay, and off again when the point where the rewind was started is reached.
- Removed an unnecessary call to cDevice::GetVideoSize().
- Moved the call to Empty() back into the pmSlow case (thanks to Andreas Baierl).
- Fixed spurious times shown in the progress display when switching from "play" to "fast
  forward".
- Now deleting old recording info before reading modified info file (suggested by
  Stefan Hofmann).

2025-04-12:

- Fixed some misplaced 'override' keywords in the 'hello' and 'skincurses' plugins.